--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1>I'm a Web<br> <span>Developer</span></h1>  
           <p></p>  
           <div>  
-            <form action="https://drive.google.com/file/d/1ZKKq6fhjmQ8DEzyrqf914QBH1oZMNDQb/view?usp=sharing" target="_blank"><button class="btn btn-secondary">DOWNLOAD CV</button></form>
+            <form action="https://drive.google.com/file/d/1PX_fP7DopzSCLyYZk5aIjrFUhuwJxoHM/view?usp=drive_link" target="_blank"><button class="btn btn-secondary">DOWNLOAD CV</button></form>
           </div>  
         </div>  
       </div>  
